- layout spacing fix

--- a/src/layout/page.scss
+++ b/src/layout/page.scss
@@ -26,7 +26,8 @@
     }
     .wp-block-template-part {
       .wp-block-group {
-        padding-top: 0 !important;
+        padding-top: 5px !important;
+        padding-bottom: 5px !important;
       }
     }
   }
